--- a/package.json
+++ b/package.json
@@ -33,12 +33,17 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "chomex": "*",
+    "file-loader": "^0.8.5",
+    "font-awesome": "^4.6.3",
+    "font-awesome-webpack": "0.0.4",
     "jest-cli": "^12.1.1",
+    "less": "^2.7.1",
     "material-ui": "^0.15.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0"
   },
   "jest": {
