JavaScriptの画像比較によるアプローチのプロトタイプです. これ https://github.com/otiai10/crescentjs を使ってます

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "base64-image-loader": "^1.0.0",
     "chomex": "*",
+    "crescent": "0.0.6",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
