--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "jest",
     "build": "webpack",
-    "release": "NODE_ENV=production webpack && rm -rf release && mkdir -p release/kcwidget && node ./scripts/pre-release && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
+    "release": "rm -rf release && mkdir -p release/kcwidget && node ./scripts/pre-release &&NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
     "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && npm run build",
     "start": "webpack --watch"
   },
@@ -46,6 +46,7 @@
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "shelljs": "^0.7.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0"
   },
