--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
     "jest-cli": "^12.1.1",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "material-ui": "^0.15.0",
     "react-dom": "^15.1.0",
