--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.9.0",
+    "babel-eslint": "^7.0.0",
     "babel-jest": "^12.1.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -36,6 +37,8 @@
     "base64-image-loader": "^1.0.0",
     "chomex": "*",
     "crescent": "0.0.6",
+    "eslint": "^3.7.1",
+    "eslint-plugin-react": "^6.3.0",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
