編成キャプチャの画像容量がめっちゃでかくてもとりあえず表示できるようにした

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,8 @@
     "webRequest",
     "notifications",
     "downloads",
+    "storage",
+    "unlimitedStorage",
     "<all_urls>"
   ],
   "icons": {
