--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "node": "7.0.0"
   },
   "scripts": {
-    "postinstall": " if test -f app-config.json ; then echo \"\\033[0;32m[艦これウィジェット]\\033[m app-config.json already exists.\" ; else echo {} > app-config.json && echo \"\\033[0;32m[艦これウィジェット] app-config.json is generated.\\033[m\" ; fi ",
+    "postinstall": "node ./scripts/postinstall",
     "test": "jest",
     "build": "webpack --progress",
-    "release": "rm -rf release && mkdir -p release/kcwidget && node ./scripts/pre-release &&NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
+    "release": "rm -rf release && mkdir -p release/kcwidget && node ./scripts/prerelease &&NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
     "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && npm run build",
     "start": "webpack --watch --progress"
   },
@@ -37,6 +37,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "base64-image-loader": "^1.0.0",
     "chomex": "*",
+    "colors": "^1.1.2",
     "crescent": "*",
     "eslint": "^3.7.1",
     "eslint-plugin-react": "^6.3.0",
