連合艦隊の大破進撃防止窓の実装
Fix #625
TODO:
    - 連合艦隊戦開始時に前回コンテナを削除
    - 座標ズレの調査

--- a/manifest.json
+++ b/manifest.json
@@ -62,6 +62,7 @@
       "matches": [
         "http://osapi.dmm.com/gadgets/ifr*"
       ],
+      "all_frames": true,
       "js": [
         "dest/js/osapi_dmm.js"
       ]
