--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,15 @@
         "chromeos": "Ctrl+Shift+0",
         "linux": "Ctrl+Shift+0"
       }
+    },
+    "mute": {
+      "description": "艦これ画面だけミュートします",
+      "suggested_key": {
+        "windows": "Ctrl+Shift+9",
+        "mac": "Command+Shift+9",
+        "chromeos": "Ctrl+Shift+9",
+        "linux": "Ctrl+Shift+9"
+      }
     }
   },
   "content_scripts": [
