リリースノート

--- a/release.json
+++ b/release.json
@@ -1,4 +1,15 @@
 {
+  "2.0.30": {
+    "features": [
+      "建造が1分前に終わってたバグの修正",
+      "クロックモードのサイズ記憶",
+      "クロックモードをタブ形式かスクロール形式か選べる設定を追加",
+      "クロックモードに設定済み通知アイコンを表示する修正",
+      "タイマーを「残り時間表示」にできる設定を追加",
+      "タイマーを「種類別残り時間順」にできる設定を追加"
+    ],
+    "comment": "タイマー表示形式のバリエーションが増えたことに伴って設定名が若干変わっているので、既存の設定が反映されないかもしれません。その場合は設定しなおしてください。"
+  },
   "2.0.29": {
     "features": [
       "バッジ色の変更",
