--- a/release.json
+++ b/release.json
@@ -1,4 +1,11 @@
 {
+  "2.0.31": {
+    "features": [
+      "右上のタイマー表示形式が設定したものと逆になってたバグを修正",
+      "クロックモードのマニュアル通知登録の艦隊/ドック指定が「表示における順番」になってたバグを修正",
+      "通知アイコンを設定していない場合に、クロックモードの便利ボタン部分に艦これウィジェットちゃんさんが表示されてしまうバグを修正"
+    ]
+  },
   "2.0.30": {
     "features": [
       "建造が1分前に終わってたバグの修正",
