バグ #678 を再現し、失敗するテストの追加

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       "<rootDir>/node_modules/chomex"
     ],
     "setupFiles": [
+      "tests/mock/chrome.js",
       "tests/mock/localStorage.js"
     ]
   }
