--- a/release.json
+++ b/release.json
@@ -1,4 +1,11 @@
 {
+  "2.0.32": {
+    "features": [
+      "大破進撃防止窓のサイズと位置を記憶する修正",
+      "設定した通知アイコンが反映されないバグを修正"
+    ],
+    "comment": "v2を試す際は、v1を完全に削除してください。大破進撃防止窓のサイズと位置指定をとりあえず追加しましたが、WindowsのAero領域考慮ができてないきがします。また、通知アイコンが反映されないバグをわりと雑に修正したので、登録済みの通知が一瞬消えるかもしれません。いずれにしても、削除して再インストールしてくれるとたすかります。"
+  },
   "2.0.31": {
     "features": [
       "右上のタイマー表示形式が設定したものと逆になってたバグを修正",
