画像URIの長さを考慮してスクショ画面のURLクエリを生成するRoutineを追加（テストつき！！）

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     ],
     "setupFiles": [
       "tests/mock/chrome.js",
+      "tests/mock/URLSearchParams.js",
       "tests/mock/localStorage.js"
     ]
   }
