--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,7 @@
 env:
   browser: true
   es6: true
+  jest: true
 extends: ['eslint:recommended', 'plugin:react/recommended']
 parser: 'babel-eslint'
 parserOptions:
