--- a/release.json
+++ b/release.json
@@ -1,4 +1,13 @@
 {
+  "2.0.34": {
+    "features": [
+      "通知のタイムライン表示がやっぱり壊れてたバグを修正",
+      "大きめのスクショしたらabout:blankページになっちゃうバグを修正",
+      "ゲーム画面が存在しているときはスクショアイコンを右上に表示するようにした",
+      "動画を撮れるようにした（WebMだけど）"
+    ],
+    "comment": "v2を試す際は、v1を完全に削除してください。chrome://extensionsの最下部の「キーボードショートカット」のところで、動画キャプチャのキーボードショートカットを登録すると、動画が撮れるようになります。長さ制限とかまだ作ってないので、アホみたいに長時間とったら多分ブラウザがクラッシュします。やったね。"
+  },
   "2.0.33": {
     "features": [
       "大破進撃防止窓のサイズと位置を記憶する修正",
