--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "less": "^2.7.1",
     "lodash": "^4.17.2",
     "material-ui": "^0.16.4",
+    "msr": "^1.3.4",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
