--- a/release.json
+++ b/release.json
@@ -1,4 +1,13 @@
 {
+  "2.0.35": {
+    "date": "2017/01/14",
+    "features": [
+      "大破進撃防止窓がちょっとずつ大きくなるバグの修正",
+      "ゲーム画面が最後に配置されていた位置を記憶する機能の不具合の調査・修正",
+      "複数PC間同期機能が壊れていたので修正"
+    ],
+    "comment": null
+  },
   "2.0.34": {
     "features": [
       "通知のタイムライン表示がやっぱり壊れてたバグを修正",
