リリースノートJSONに日付のフィールドつけるの忘れた

--- a/release.json
+++ b/release.json
@@ -9,6 +9,7 @@
     "comment": null
   },
   "2.0.34": {
+    "date": "2017/01/11",
     "features": [
       "通知のタイムライン表示がやっぱり壊れてたバグを修正",
       "大きめのスクショしたらabout:blankページになっちゃうバグを修正",
@@ -18,6 +19,7 @@
     "comment": "v2を試す際は、v1を完全に削除してください。chrome://extensionsの最下部の「キーボードショートカット」のところで、動画キャプチャのキーボードショートカットを登録すると、動画が撮れるようになります。長さ制限とかまだ作ってないので、アホみたいに長時間とったら多分ブラウザがクラッシュします。やったね。"
   },
   "2.0.33": {
+    "date": "2017/01/10",
     "features": [
       "大破進撃防止窓のサイズと位置を記憶する修正",
       "設定した通知アイコンが反映されないバグを修正"
@@ -25,6 +27,7 @@
     "comment": "v2を試す際は、v1を完全に削除してください。大破進撃防止窓のサイズと位置指定をとりあえず追加しましたが、WindowsのAero領域考慮ができてないきがします。また、通知アイコンが反映されないバグをわりと雑に修正したので、登録済みの通知が一瞬消えるかもしれません。いずれにしても、削除して再インストールしてくれるとたすかります。"
   },
   "2.0.31": {
+    "date": "2016/12/24",
     "features": [
       "右上のタイマー表示形式が設定したものと逆になってたバグを修正",
       "クロックモードのマニュアル通知登録の艦隊/ドック指定が「表示における順番」になってたバグを修正",
@@ -32,6 +35,7 @@
     ]
   },
   "2.0.30": {
+    "date": "2016/12/23",
     "features": [
       "建造が1分前に終わってたバグの修正",
       "クロックモードのサイズ記憶",
@@ -43,6 +47,7 @@
     "comment": "タイマー表示形式のバリエーションが増えたことに伴って設定名が若干変わっているので、既存の設定が反映されないかもしれません。その場合は設定しなおしてください。"
   },
   "2.0.29": {
+    "date": "2016/12/21",
     "features": [
       "バッジ色の変更",
       "大破進撃防止窓をゲーム外に表示する設定を追加",
