--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,8 @@
     ]
   },
   "web_accessible_resources": [
-    "chrome_ex_oauth.html*"
+    "chrome_ex_oauth.html*",
+    "dest/img/icons/*"
   ],
   "commands": {
     "capture": {
