--- a/release.json
+++ b/release.json
@@ -1,4 +1,17 @@
 {
+  "2.0.36": {
+    "date": "2017/01/22",
+    "features": [
+      "クロックモードのタイマー表示にマウスオーバーで補完情報を表示するようにした",
+      "自由文メモ帳機能をクロックモードに追加",
+      "（APPモードのみ）ゲーム画面内でワンクリックでミュート/アンミュートできる設定を追加した",
+      "バグ報告・機能要望をGitHubに投稿するための画面を追加した",
+      "設定画面からTwitter連携をオン/オフできるようにした",
+      "運営電文を右上ポップアップに表示する機能を追加",
+      "右上ポップアップの背景をカスタマイズできるようにした（ついでに設定の背景も）"
+    ],
+    "comment": "v2を試す際はv1を完全に削除してください。運営電文の取得を、ウェブページのクロールではなくTwitterAPIを使用するように変更したため、Twitterの連携が必須になりました。あとデイリー任務進捗つくればv1を完全にリプレースできるかなと思っています。"
+  },
   "2.0.35": {
     "date": "2017/01/14",
     "features": [
