--- a/release.json
+++ b/release.json
@@ -1,4 +1,15 @@
 {
+  "2.0.37": {
+    "date": "2017/01/27",
+    "features": [
+        "大破進撃防止窓の設定が「使用しない」にもかかわらず、6-5の連合艦隊マスで大破進撃防止窓が出るバグの修正",
+        "運営電文を表示していないときに背景カスタマイズがさみしいので、画像の右下を優先的に表示するようにした",
+        "デイリー任務進捗管理表をクロックモードに追加した",
+        "なるべく最後のミュート状態を覚えておいて次回LAUNCH時に反映させるようにした",
+        "改修工廠早見表が表示されていなかったバグを修正"
+    ],
+    "comment": "v2を試す際はv1を完全に削除してください。デイリー任務進捗表を実装しましたが、マニュアルで達成にする機能や、未着手アラートは未実装です。機能要望からissueをたててください。"
+  },
   "2.0.36": {
     "date": "2017/01/22",
     "features": [
