--- a/release.json
+++ b/release.json
@@ -1,4 +1,14 @@
 {
+  "2.0.38": {
+    "date": "2017/01/29",
+    "features": [
+        "ゲーム画面内ボタンにスクショボタンを追加",
+        "画像認識による修復入渠時間取得を失敗したときに手動登録できるようにした",
+        "別窓表示した大破進撃防止窓をクリックしたらフォーカスがゲームに移るようにした",
+        "WHITEモードでゲーム内ボタンが表示されていたバグを修正"
+    ],
+    "comment": "そろそろv1をリプレースします。v1がv2でリプレースされると、v2のストアのリンクは消えるので、ご注意ください。ゲーム内ボタン、右上より左下のほうがいいかもしれない。あと、もしかしたらボタンごとに表示/非表示が選べるといいかもしれない。"
+  },
   "2.0.37": {
     "date": "2017/01/27",
     "features": [
