--- a/release.json
+++ b/release.json
@@ -1,4 +1,13 @@
 {
+  "2.0.39": {
+    "date": "2017/01/31",
+    "features": [
+        "うっかり閉じるボタンを押しちゃったときにアラート出す機能を追加",
+        "「遠征強化令」機能を追加",
+        "バグ報告画面にバグがあったので修正"
+    ],
+    "comment": "もうイベントなの... 資源ぜんぜん貯まってない... 特に弾薬..."
+  },
   "2.0.38": {
     "date": "2017/01/29",
     "features": [
