--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "url": "https://github.com/otiai10/kcwidget/issues"
   },
   "homepage": "https://github.com/otiai10/kcwidget#readme",
-  "dependencies": {
-    "react": "^15.4.2"
-  },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.9.0",
@@ -51,6 +48,7 @@
     "lodash": "^4.17.2",
     "material-ui": "^0.16.4",
     "msr": "^1.3.4",
+    "react": "^15.4.2",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^2.0.1",
