--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,9 @@ language: node_js
 addons:
   firefox: "46.0"
 node_js:
-  - "6.2"
+  - "7.0"
+cache: yarn
 install:
-  - npm install
-# before_script:
-  # - "export DISPLAY=:99.0"
-  # - "sh -e /etc/init.d/xvfb start"
-  # - sleep 5 # give xvfb some time to start
-  # - npm run build
+  - yarn install
 script:
-  # - npm run launchers
-  # - npm run ci
-  - npm test
+  - yarn test
