--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,15 @@ language: node_js
 addons:
   firefox: "46.0"
 node_js:
-  - "7.0"
-cache: yarn
+  - "6.2"
 install:
-  - yarn install
+  - npm install
+# before_script:
+  # - "export DISPLAY=:99.0"
+  # - "sh -e /etc/init.d/xvfb start"
+  # - sleep 5 # give xvfb some time to start
+  # - npm run build
 script:
-  - yarn test
+  # - npm run launchers
+  # - npm run ci
+  - npm test
