--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kanColleWidget",
-  "version": "2.0.39",
+  "name": "kcwidget",
+  "version": "0.0.1",
   "description": "KanColleWidget for Chrome/Firefox",
   "engines": {
     "node": "7.0.0"
@@ -9,13 +9,16 @@
     "postinstall": "node ./scripts/postinstall",
     "test": "jest",
     "build": "webpack --progress",
-    "release": "rm -rf release && mkdir -p release/kcwidget && node ./scripts/prerelease && NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
-    "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && yarn run build",
+    "release": "rm -rf release && mkdir -p release/kcwidget && node ./scripts/prerelease &&NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
+    "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && npm run build",
     "add-mission": "node ./scripts/add-mission",
     "fetch-wiki": "node ./scripts/fetch-wiki",
     "start": "webpack --watch --progress"
   },
-  "repository": "git+https://github.com/otiai10/kanColleWidget.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/otiai10/kcwidget.git"
+  },
   "author": "otiai10",
   "license": "MIT",
   "bugs": {
@@ -65,6 +68,5 @@
       "tests/mock/URLSearchParams.js",
       "tests/mock/localStorage.js"
     ]
-  },
-  "main": "src/js/entrypoints/background.js"
+  }
 }
