--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "postinstall": "node ./scripts/postinstall",
-    "test": "jest",
+    "test": "jest --no-cache",
     "build": "webpack --progress",
     "release": "rm -rf release && mkdir -p release/kcwidget && node ./scripts/prerelease &&NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
     "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && npm run build",
@@ -27,9 +27,10 @@
   "homepage": "https://github.com/otiai10/kcwidget#readme",
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.22.2",
     "babel-core": "^6.9.0",
     "babel-eslint": "^7.0.0",
-    "babel-jest": "^12.1.0",
+    "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
@@ -41,8 +42,8 @@
     "crescent": "*",
     "eslint": "^3.7.1",
     "eslint-plugin-react": "^6.3.0",
-    "file-loader": "^0.8.5",
-    "jest-cli": "^12.1.1",
+    "file-loader": "^0.10.0",
+    "jest-cli": "^18.1.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "lodash": "^4.17.2",
@@ -50,9 +51,7 @@
     "msr": "^1.3.4",
     "react": "^15.4.2",
     "react-dom": "^15.1.0",
-    "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.5.2",
     "shelljs": "^0.7.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1"
@@ -64,9 +63,9 @@
       "<rootDir>/node_modules/chomex"
     ],
     "setupFiles": [
-      "tests/mock/chrome.js",
-      "tests/mock/URLSearchParams.js",
-      "tests/mock/localStorage.js"
+      "./tests/mock/chrome.js",
+      "./tests/mock/URLSearchParams.js",
+      "./tests/mock/localStorage.js"
     ]
   }
 }
