--- a/release.json
+++ b/release.json
@@ -1,4 +1,14 @@
 {
+  "2.0.40": {
+    "date": "2017/02/01",
+    "features": [
+        "タイマーは使うけど通知ポップアップはいらないという設定を追加",
+        "任務進捗が地味にバグってたので修正",
+        "Twitter認証を切ったときの運営電文の挙動を修正",
+        "遠征強化令の発令で通知ポップアップを選択できるようにした"
+    ],
+    "comment": "遠征強化令の設定を変えたので、設定してた人は一時的に無効になってる気がします。 ┌(┌^p^)┐ イベント近いのに弾薬無いよぅ..."
+  },
   "2.0.39": {
     "date": "2017/01/31",
     "features": [
