--- a/release.json
+++ b/release.json
@@ -1,5 +1,13 @@
 [
   {
+    "version": "2.0.42",
+    "features": [
+      "設定画面が開かないバグ修正"
+    ],
+    "date": "2017/02/05",
+    "comment": null
+  },
+  {
     "version": "2.0.41",
     "features": [
       "設定画面に現在のバージョンとリリースノートを表示するよう変更",
