--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.1",
   "description": "KanColleWidget for Chrome/Firefox",
   "engines": {
-    "node": "7.0.0"
+    "node": "7.5.0"
   },
   "scripts": {
     "lint": "eslint src",
-    "postinstall": "coffee ./scripts/postinstall.coffee",
+    "postinstall": "./node_modules/.bin/coffee ./scripts/postinstall.coffee",
     "test": "eslint src && jest --no-cache",
     "build": "webpack --progress",
-    "releasenote": "coffee ./scripts/releasenote.coffee --out",
-    "release": "rm -rf release && mkdir -p release/kcwidget && coffee ./scripts/prerelease.coffee && NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
+    "releasenote": "./node_modules/.bin/coffee ./scripts/releasenote.coffee --out",
+    "release": "rm -rf release && mkdir -p release/kcwidget && ./node_modules/.bin/coffee ./scripts/prerelease.coffee && NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
     "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && npm run build",
-    "fetch-wiki": "coffee ./scripts/fetch-wiki.coffee",
+    "fetch-wiki": "./node_modules/.bin/coffee ./scripts/fetch-wiki.coffee",
     "start": "webpack --watch --progress"
   },
   "repository": {
