FEATURE: スクショ直接ダウンロード時に画面下部にファイルバーが出ちゃうの修正
Fix #755
TODO: saveAs:false にChromeのバグがあります
https://twitter.com/otiai10/status/831292095352614912
https://bugs.chromium.org/p/chromium/issues/detail?id=417112

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
     "webRequest",
     "notifications",
     "downloads",
+    "downloads.shelf",
     "storage",
     "unlimitedStorage",
     "<all_urls>"
