--- a/release.json
+++ b/release.json
@@ -1,5 +1,20 @@
 [
   {
+    "version": "2.0.43",
+    "features": [
+      "連合艦隊の編成キャプチャで中央に線をひいとく修正",
+      "任務着手忘れ防止アラート機能の実装",
+      "スクショ直接ダウンロード時に画面下部にファイルバーが出ちゃうの修正",
+      "連合艦隊の大破進撃防止窓の別窓表示を実装",
+      "ツイートするためにスクショや編成キャプチャの画像サイズを綺麗に減らす機能を追加",
+      "大破進撃防止窓の最前面固定をなんとかして実現した",
+      "実績記録の週次記録を月曜5時にリセットする機能をやっと追加（たぶんうごく）",
+      "実績記録であとまわしにしてたやつだいたい全部追加"
+    ],
+    "date": "2017/02/15",
+    "comment": "『艦これウィジェット』の連合艦隊の大破進撃防止窓は、クリックを検知して第二艦隊撮ってるので、素早くダブルクリックしたら第一艦隊x2となります。そういうのが嫌な人は他の通信結果見るツールなどを使ってください。"
+  },
+  {
     "version": "2.0.42",
     "features": [
       "設定画面が開かないバグ修正"
