--- a/release.json
+++ b/release.json
@@ -1,5 +1,16 @@
 [
   {
+    "version": "2.0.44",
+    "features": [
+      "いじっちゃった窓サイズをリロードせずに右上から復元できるようにした",
+      "ブラウザのズームをいじってるとAPP窓の大きさが変になるバグの修正",
+      "ショートカットキー経由でミュートした場合でもゲーム内ミュートボタンの表示に反映させる",
+      "任務着手忘れアラートを通知ポップアップ化した"
+    ],
+    "date": "2017/02/17",
+    "comment": null
+  },
+  {
     "version": "2.0.43",
     "features": [
       "連合艦隊の編成キャプチャで中央に線をひいとく修正",
