--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "eslint src && jest --no-cache",
     "build": "webpack --progress",
     "releasenote": "./node_modules/.bin/coffee ./scripts/releasenote.coffee --out",
-    "release": "rm -rf release && mkdir -p release/kcwidget && ./node_modules/.bin/coffee ./scripts/prerelease.coffee && NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
+    "release": "rm -rf release dest/js && mkdir -p release/kcwidget && ./node_modules/.bin/coffee ./scripts/prerelease.coffee && NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
     "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && npm run build",
     "fetch-wiki": "./node_modules/.bin/coffee ./scripts/fetch-wiki.coffee",
     "start": "webpack --watch --progress"
