--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-eslint": "^7.0.0",
     "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
