--- a/release.json
+++ b/release.json
@@ -1,5 +1,17 @@
 [
   {
+    "version": "2.0.45",
+    "features": [
+      "基地航空隊の編成キャプチャをプリセットにした",
+      "連合艦隊の戦闘時に大破進撃防止窓が閉じないバグの修正",
+      "アニメーションGIFでキャプチャできる機能の追加",
+      "スクショのキーボードショートカットからツイートまでをCtrl+Enterでマウスレスにできるようにした",
+      "大破進撃防止窓の変な余白を修正"
+    ],
+    "date": "2017/02/27",
+    "comment": "編成キャプチャ画面の右上は実はドロップダウンになってて、連合艦隊の編成キャプチャとか、今回から基地航空隊の編成キャプチャとか簡単に撮れるようになってるんです、あまり知られてないけど。その他にも、実はあまり知られてない機能けっこうあると思います。"
+  },
+  {
     "version": "2.0.44",
     "features": [
       "いじっちゃった窓サイズをリロードせずに右上から復元できるようにした",
