--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kcwidget",
-  "version": "0.0.1",
+  "version": "2.0.45",
   "description": "KanColleWidget for Chrome/Firefox",
   "engines": {
     "node": "7.5.0"
@@ -16,10 +16,7 @@
     "fetch-wiki": "./node_modules/.bin/coffee ./scripts/fetch-wiki.coffee",
     "start": "webpack --watch --progress"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/otiai10/kcwidget.git"
-  },
+  "repository": "git+https://github.com/otiai10/kcwidget.git",
   "author": "otiai10",
   "license": "MIT",
   "bugs": {
