--- a/release.json
+++ b/release.json
@@ -1,5 +1,17 @@
 [
   {
+    "version": "2.0.47",
+    "features": [
+      "任務着手忘れ防止アラートの残りを（たぶん）全部実装した",
+      "デッキごとではなく出撃時間による簡易疲労度タイマー登録（ローテーション出撃とも言う）",
+      "スクラップブックという機能の名前を「アーカイブ」に変更",
+      "スクショ編集画面からスクラップブック保存できる機能を追加",
+      "ダッシュボード（クロックモード）のデザインがデフォルトでは崩れていたのの修正"
+    ],
+    "date": "2017/03/12",
+    "comment": null
+  },
+  {
     "version": "2.0.46",
     "features": [
       "デッキごとではなく出撃時間による簡易疲労度タイマー登録（ローテーション出撃とも言う）",
