とりあえず資源推移グラフの表示

--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
       "./tests/mock/URLSearchParams.js",
       "./tests/mock/localStorage.js"
     ]
+  },
+  "dependencies": {
+    "recharts": "^0.21.2"
   }
 }
