--- a/release.json
+++ b/release.json
@@ -1,5 +1,22 @@
 [
   {
+    "version": "2.0.48",
+    "features": [
+      "任務着手忘れアラートを、通知ポップアップではなく、アラートダイアログも選択できるようにした",
+      "カスタムキャプチャ設定の削除機能を追加",
+      "デイリー任務全達成時のメッセージを追加",
+      "複数PC間同期のオートセーブ機能",
+      "任務進捗をSAVE/LOADできるようにした",
+      "任務着手忘れ防止アラートの残りを（たぶん）全部実装した",
+      "デッキごとではなく出撃時間による簡易疲労度タイマー登録（ローテーション出撃とも言う）",
+      "スクラップブックという機能の名前を「アーカイブ」に変更",
+      "スクショ編集画面からスクラップブック保存できる機能を追加",
+      "ダッシュボード（クロックモード）のデザインがデフォルトでは崩れていたのの修正"
+    ],
+    "date": "2017/03/31",
+    "comment": null
+  },
+  {
     "version": "2.0.47",
     "features": [
       "任務着手忘れ防止アラートの残りを（たぶん）全部実装した",
