--- a/release.json
+++ b/release.json
@@ -1,5 +1,16 @@
 [
   {
+    "version": "2.0.49",
+    "features": [
+      "任務進捗の手動変更機能",
+      "ダッシュボードのデフォルトサイズをやや修正",
+      "資源推移のCSVエクスポート機能の実装",
+      "資源推移表の色々詳細とかを表示するページを追加"
+    ],
+    "date": "2017/04/17",
+    "comment": ""
+  },
+  {
     "version": "2.0.48",
     "features": [
       "任務着手忘れアラートを、通知ポップアップではなく、アラートダイアログも選択できるようにした",
