--- a/release.json
+++ b/release.json
@@ -1,5 +1,22 @@
 [
   {
+    "version": "2.0.50",
+    "features": [
+      "調でっかい画像を通知アイコンに設定したら表示が超でっかくなるバグを修正",
+      "遠征強化アラートや未着手アラートのアイコンを設定済みのアイコンにする修正",
+      "1-6Fマス戦闘開始時に前回戦闘の艦隊損傷確認が閉じないバグを修正",
+      "カスタムカウンター機能の実装",
+      "ダッシュボードの資源推移タブから手動取得できるようにした",
+      "資源推移の取得を手動にしている場合、同日中であっても上書きしないようにした",
+      "資源推移記録を手動/自動の選択可能にした",
+      "資源推移のCSVファイル名に日付を付加",
+      "外部拡張連携ON/OFFは概念的にややこしいので廃止",
+      "現在上がっているissueへのリンクが間違ってたので修正"
+    ],
+    "date": "2017/04/20",
+    "comment": ""
+  },
+  {
     "version": "2.0.49",
     "features": [
       "任務進捗の手動変更機能",
