FEATURE: 資源推移の手動「入力」機能の実装
COMMENT: MacのRetinaで開発してたんで、画像解析で十分「取得」できるかと思ってたんですが、ぜんぜんダメっていう意見が多数だったので、もはや手動で「入力」できるようにしました。イベント近いんで、資源の壊滅的な変化をビジュアルに共有できるよう資源推移表の画像ツイートもできるようにしました。

Fix #825

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.2",
     "material-ui": "^0.17.0",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-tap-event-plugin": "^2.0.1",
