--- a/release.json
+++ b/release.json
@@ -1,5 +1,20 @@
 [
   {
+    "version": "2.0.51",
+    "features": [
+      "通知クリックによるLAUNCHでも前回ミュート状態を反映させるようにした",
+      "大破進撃防止窓や通知をクリックしたときゲーム画面サイズが回復してしまうバグを修正",
+      "資源推移表のドットがうるさいので消した",
+      "資源推移表の画像ツイート機能の追加",
+      "資源推移の手動「入力」機能の実装",
+      "資源推移表のx軸間隔が時間間隔ではなくデータ数間隔だったので修正",
+      "資源推移表を期間指定でフィルタリングできるようにした",
+      "スクショ編集画面で長方形ツールの塗り無し機能を実装"
+    ],
+    "date": "2017/04/27",
+    "comment": "スクショ編集画面で長方形ツール選択時に、上部サブナビゲーションで「fill」のチェックボックスをはずすと塗り無しの長方形を書けるようにしました。資源推移表の画像ツイート時に必要かなと思って。,MacのRetinaで開発してたんで、画像解析で十分「取得」できるかと思ってたんですが、ぜんぜんダメっていう意見が多数だったので、もはや手動で「入力」できるようにしました。イベント近いんで、資源の壊滅的な変化をビジュアルに共有できるよう資源推移表の画像ツイートもできるようにしました。"
+  },
+  {
     "version": "2.0.50",
     "features": [
       "調でっかい画像を通知アイコンに設定したら表示が超でっかくなるバグを修正",
