--- a/release.json
+++ b/release.json
@@ -1,5 +1,16 @@
 [
   {
+    "version": "2.0.52",
+    "features": [
+      "資源推移表が時々時間でソートされてなくてグラフがどったんばったんするバグの修正",
+      "資源推移の手動入力したときにグラフが反映されないケースがあるバグの修正",
+      "資源推移表で0が入力できなかったバグの修正",
+      "資源記録の個別レコード修正機能を実装"
+    ],
+    "date": "2017/04/27",
+    "comment": ""
+  },
+  {
     "version": "2.0.51",
     "features": [
       "通知クリックによるLAUNCHでも前回ミュート状態を反映させるようにした",
