--- a/release.json
+++ b/release.json
@@ -1,5 +1,13 @@
 [
   {
+    "version": "2.0.53",
+    "features": [
+      "資源記録がひとつも無いときにヌルポするやつをガッてした修正"
+    ],
+    "date": "2017/04/28",
+    "comment": "矢継ぎ早ににバグ修正ですみません"
+  },
+  {
     "version": "2.0.52",
     "features": [
       "資源推移表が時々時間でソートされてなくてグラフがどったんばったんするバグの修正",
