--- a/release.json
+++ b/release.json
@@ -1,5 +1,17 @@
 [
   {
+    "version": "2.0.54",
+    "features": [
+      "改修工廠表の曜日とか装備とか消費装備とかでフィルタできる機能の実装",
+      "画像ツイートにリプライ先を指定できる機能を実装",
+      "デイリー任務全部かたづけたときの画面を修正",
+      "編成キャプチャ、連合艦隊編成キャプチャの場合、ツイートに「#編成キャプチャ」タグをつけるようにした",
+      "ゲーム内スクショボタンが写り込んでしまう問題にがんばって対応"
+    ],
+    "date": "2017/05/07",
+    "comment": ""
+  },
+  {
     "version": "2.0.53",
     "features": [
       "資源記録がひとつも無いときにヌルポするやつをガッてした修正"
