--- a/release.json
+++ b/release.json
@@ -1,5 +1,16 @@
 [
   {
+    "version": "2.0.55",
+    "features": [
+      "資源推移表のx軸を時間軸に固定できたので、1日1レコードルールを撤廃",
+      "特殊条件のデイリー任務の出現条件がJSTゼロ時になっていたバグを修正",
+      "ゲーム内スクショボタンの映り込み問題の原因の可能性を完全に削除",
+      "スクショ編集画面で減サイズを行うとプリセットなタグなどが落ちるバグを修正"
+    ],
+    "date": "2017/05/10",
+    "comment": ""
+  },
+  {
     "version": "2.0.54",
     "features": [
       "改修工廠表の曜日とか装備とか消費装備とかでフィルタできる機能の実装",
