--- a/release.json
+++ b/release.json
@@ -1,5 +1,25 @@
 [
   {
+    "version": "2.0.56",
+    "features": [
+      "特殊条件デイリー任務の出現条件が日付下一桁になってなかったバグを修正",
+      "改修工廠早見表wiki同期スクリプトのバグを修正",
+      "改修工廠早見表の曜日がバグってたの修正",
+      "資源推移表のツイートテキストフォーマットを改善",
+      "通常のスクショを減サイズにかけたときツイートテキストにnullが入るバグ修正",
+      "資源推移記録を1時間以内にやり続けるとレコードが１つだけになるバグを修正",
+      "資源推移のCSVエクスポートでも期間の指定をできるように修正",
+      "資源推移表のタイトル部分の表示バグ修正",
+      "画像のツイートに失敗したときダイアログのコンテキストを失わないように修正",
+      "資源推移表の設定を分離",
+      "資源記録ツイートの数値を1000=kと丸める設定を追加",
+      "資源記録のためのOCR処理の精度向上（ちょっとだけ）",
+      "スクショを常に中型にする設定を追加"
+    ],
+    "date": "2017/06/01",
+    "comment": ""
+  },
+  {
     "version": "2.0.55",
     "features": [
       "資源推移表のx軸を時間軸に固定できたので、1日1レコードルールを撤廃",
