--- a/release.json
+++ b/release.json
@@ -1,5 +1,14 @@
 [
   {
+    "version": "2.0.57",
+    "features": [
+      "CSVインポート機能を追加",
+      "アーカイブをダウンロードできる機能を追加（おもにv2開発版→v2への引越しのため）"
+    ],
+    "date": "2017/06/03",
+    "comment": "このバージョン（v2.0.57）を最後に、「v2開発版」としてのストアリリース・アップデートを終了し、[v1として公開していたストアリンク|https://chrome.google.com/webstore/detail/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/iachoklpnnjfgmldgelflgifhdaebnol?hl=ja]に合流する予定です（便宜的に「v2リリース版」と呼びます）。それに伴い、「v2開発版」だけに存在するデータ、とくに「資源推移表」と「アーカイブ」を、「資源推移表」であれば「CSV EXPORT」するなどして、あらかじめローカルにダウンロードしておいてください。のちに、「v2リリース版」への引越しが無事済んだら「CSV IMPORT」するなどしてあげてください。v2へのリプレースの準備として「v2開発版」の改善に長い間付き合って頂き、おかげさまで（たぶん）v1をリプレースしてもだいじょうぶなクオリティにできたと思います。具体的にどう変わったか、今後の開発継続をどうしていくかなどは、後日スライドにしたいと思っています。みなさんの参加・協力に感謝いたします。"
+  },
+  {
     "version": "2.0.56",
     "features": [
       "特殊条件デイリー任務の出現条件が日付下一桁になってなかったバグを修正",
