--- a/release.json
+++ b/release.json
@@ -1,5 +1,11 @@
 [
   {
+    "version": "2.0.60",
+    "features": [],
+    "date": "2017/06/13",
+    "comment": "[v2開発版|https://chrome.google.com/webstore/detail/v2%E9%96%8B%E7%99%BA%E7%89%88-beta%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/egkgleinehaapbpijnlpbllfeejjpceb/reviews]へのたくさんの方の参加、感謝いたします。晴れて、v2を正式にリリースし、コードがめちゃくちゃでメンテができないシロモノだったv1を引退させることができました。v2にはv1には無い機能がまあまあありますが、個人的に一番好きなのは「遠征強化令」と「資源推移表」です。しかし、一番重要なポイントとしては、v1ではAPPモードでもWHITEモードでもChrome拡張から起動されたゲーム画面であることを明示するためにURLに`?widget=true`というパラメータを付加していましたが、v2ではゲーム画面のURLを全く変えることなくAPP化、WHITE化ができるようになっています。これは地味ですが、大きな改善です。なお、v2がリリースになりましたが、[v2移行直後の注意点|https://github.com/otiai10/kanColleWidget/wiki/v2%E7%A7%BB%E8%A1%8C%E3%81%AE%E8%AB%B8%E6%B3%A8%E6%84%8F]、および[ひきつづきv1を使いたい人のためのドキュメント|https://github.com/otiai10/kanColleWidget/wiki/%E3%81%B2%E3%81%8D%E3%81%A4%E3%81%A5%E3%81%8Dv1%E3%82%92%E4%BD%BF%E3%81%84%E3%81%A4%E3%81%A5%E3%81%91%E3%82%8B%E6%96%B9%E6%B3%95]をまとめましたので、ご参照ください。開発者本人におきましては、2017春イベントにて不注意にも伊26を轟沈させてしまったこと、ラスダンで沼りすぎてガングートを逃したことなどが起因し、やや「艦これ」からは遠のいております。みなさまの提督ライフが、末永く、適度に快適であることを望んでいます。"
+  },
+  {
     "version": "2.0.57",
     "features": [
       "CSVインポート機能を追加",
