--- a/release.json
+++ b/release.json
@@ -1,5 +1,19 @@
 [
   {
+    "version": "2.0.61",
+    "features": [
+      "LAUNCH時に同期データをautoloadする機能を追加",
+      "オートセーブ時にもフィードバック通知をするように修正",
+      "画面内ボタンの設定がONになっていないとオートセーブが走っていなかったバグの修正",
+      "艦これウィジェットの使い方に関するwikiへのリンクを追加",
+      "夜戦マス戦闘開始時に大破進撃窓が消えないバグを解消",
+      "WHITEモードでもゲーム画面ボタンを表示して1クリックでミュートするなどできるようにした",
+      "ゲーム内ミュート・スクショボタンが演習のキャンセルボタンにかぶるので小さくした"
+    ],
+    "date": "2017/06/26",
+    "comment": "同期データのオートセーブ/オートロード時にフィードバックUIとして通知出すようにしたんですが、うるさいですかね？このためだけに設定つくるのもなんだし、我慢できないぐらいうざかったら言ってください。時間があれば実装します。"
+  },
+  {
     "version": "2.0.60",
     "features": [],
     "date": "2017/06/13",
