FEATURE: 大破進撃防止窓のゲーム画面内表示がうごいてなかったバグを修正

--- a/manifest.json
+++ b/manifest.json
@@ -100,6 +100,15 @@
       "js": [
         "dest/js/osapi_dmm.js"
       ]
+    },
+    {
+      "matches": [
+        "http://osapi.dmm.com/gadgets/ifr*"
+      ],
+      "all_frames": true,
+      "js": [
+        "dest/js/iframe.js"
+      ]
     }
   ],
   "options_page": "dest/html/options.html"
