FEATURE: 動画キャプチャボタンを実装
COMMENT: けっこう前から「動画キャプチャ」機能自体はあって、chrome://extensionsでキーボードショートカットを登録すれば使えたんですが、このたび、「動画キャプチャ」への導線UIを追加実装しました。「ゲーム画面右上にミュートなどのボタンを表示する」の設定をONにして、そのゲーム画面内ボタンで右クリックしてみてください。たぶんそこにボタンがあります。

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "permissions": [
     "tabs",
     "activeTab",
+    "contextMenus",
     "tabCapture",
     "webRequest",
     "notifications",
@@ -16,6 +17,7 @@
     "<all_urls>"
   ],
   "icons": {
+    "16": "dest/img/icons/chang.16.png",
     "48": "dest/img/icons/chang.48.png"
   },
   "browser_action": {
