--- a/release.json
+++ b/release.json
@@ -1,5 +1,14 @@
 [
   {
+    "version": "2.0.63",
+    "features": [
+      "大破進撃防止窓のゲーム画面内表示がうごいてなかったバグを修正",
+      "動画キャプチャボタンを実装"
+    ],
+    "date": "2017/07/15",
+    "comment": "けっこう前から「動画キャプチャ」機能自体はあって、chrome://extensionsでキーボードショートカットを登録すれば使えたんですが、このたび、「動画キャプチャ」への導線UIを追加実装しました。「ゲーム画面右上にミュートなどのボタンを表示する」の設定をONにして、そのゲーム画面内ボタンで右クリックしてみてください。たぶんそこにボタンがあります。"
+  },
+  {
     "version": "2.0.62",
     "features": [
       "窓設定において設定名が変更できない仕様を変更",
