--- a/release.json
+++ b/release.json
@@ -1,5 +1,15 @@
 [
   {
+    "version": "2.0.64",
+    "features": [
+      "カスタム窓設定の作成後にモード（APP/WHITE）が変えられないバグを修正",
+      "大破進撃防止を別窓にしたときマウスオーバーで非表示になってしまうバグを修正",
+      "ツイートに付与するハッシュタグを設定できる機能を追加"
+    ],
+    "date": "2017/07/23",
+    "comment": ""
+  },
+  {
     "version": "2.0.63",
     "features": [
       "大破進撃防止窓のゲーム画面内表示がうごいてなかったバグを修正",
