--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "postinstall": "./node_modules/.bin/coffee ./scripts/postinstall.coffee",
     "test": "eslint src && jest --no-cache",
     "build": "webpack --progress",
+    "build-release": "NODE_ENV=production webpack --progress",
     "releasenote": "./node_modules/.bin/coffee ./scripts/releasenote.coffee --out",
-    "release": "./node_modules/.bin/coffee ./scripts/prerelease.coffee && npm run build-release",
-    "build-release": "rm -rf release/kcwidget release/kcwidget.zip dest/js && mkdir -p release/kcwidget && NODE_ENV=production webpack && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
+    "release": "./node_modules/.bin/coffee ./scripts/prerelease.coffee && npm run build-release && npm run pack",
+    "pack": "rm -rf release/kcwidget release/kcwidget.zip && mkdir -p release/kcwidget && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
+    "crx": "/Applications/Google\\ Chrome.app/Contents/MacOS/Google\\ Chrome --pack-extension=${PWD}/release/kcwidget --pack-extension-key=${PWD}/release/kcwidget.pem",
+    "firefox-dev": "npm run build && npm run pack && npm run crx",
     "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && npm run build",
     "fetch-wiki": "./node_modules/.bin/coffee ./scripts/fetch-wiki.coffee",
     "start": "webpack --watch --progress"
