--- a/release.json
+++ b/release.json
@@ -1,5 +1,16 @@
 [
   {
+    "version": "2.0.65",
+    "features": [
+      "ツイート時のタグ付与のUIを改善",
+      "タイマーを”のこり時間表示”にすると、マウスオーバーしても時刻が表示されないバグを修正",
+      "大破進撃防止窓が残っている状態でゲーム窓を閉じると、次回のゲーム窓整形がうまくいかない現象を修正",
+      "大破進撃防止窓を別窓にしているとき窓サイズが小さくて第2艦隊が表示されないバグを修正"
+    ],
+    "date": "2017/08/29",
+    "comment": ""
+  },
+  {
     "version": "2.0.64",
     "features": [
       "カスタム窓設定の作成後にモード（APP/WHITE）が変えられないバグを修正",
