--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "homepage": "https://github.com/otiai10/kanColleWidget#readme",
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -40,27 +40,28 @@
     "babel-preset-stage-0": "^6.24.1",
     "base64-image-loader": "^1.0.0",
     "cheerio-httpcli": "^0.6.9",
-    "chomex": "^1.0.2",
-    "coffee-script": "^1.12.5",
+    "chomex": "^1.0.8",
+    "coffee-script": "^1.12.7",
     "colors": "^1.1.2",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.11.2",
+    "jest": "^20.0.4",
     "jest-cli": "^19.0.2",
-    "json-loader": "^0.5.4",
+    "json-loader": "^0.5.7",
     "less": "^2.7.1",
     "lodash": "^4.17.2",
-    "material-ui": "^0.17.0",
+    "material-ui": "^0.17.4",
     "moment": "^2.18.1",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-tap-event-plugin": "^2.0.1",
-    "recharts": "^0.22.3",
-    "shelljs": "^0.7.7",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.4.1",
-    "worker-loader": "^0.8.0"
+    "recharts": "^0.22.4",
+    "shelljs": "^0.7.8",
+    "url-loader": "^0.5.9",
+    "webpack": "^2.7.0",
+    "worker-loader": "^0.8.1"
   },
   "jest": {
     "verbose": true,
