--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chomex": "^1.0.9",
     "coffee-script": "^1.12.7",
     "colors": "^1.1.2",
+    "css-loader": "^0.28.7",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
     "file-loader": "^0.11.2",
@@ -54,11 +55,13 @@
     "material-ui": "^0.17.4",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
+    "rc-slider": "^8.3.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-tap-event-plugin": "^2.0.1",
     "recharts": "^0.22.4",
     "shelljs": "^0.7.8",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.7.0",
     "worker-loader": "^0.8.1"
