ChromeExOauthのcallbackが変わったことに寄るscriptsの変更: Related: #907

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-release": "NODE_ENV=production webpack --progress",
     "releasenote": "./node_modules/.bin/coffee ./scripts/releasenote.coffee --out",
     "release": "./node_modules/.bin/coffee ./scripts/prerelease.coffee && npm run build-release && npm run pack",
-    "pack": "rm -rf release/kcwidget release/kcwidget.zip && mkdir -p release/kcwidget && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && cp chrome_ex_oauth.html release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
+    "pack": "rm -rf release/kcwidget release/kcwidget.zip && mkdir -p release/kcwidget && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
     "crx": "/Applications/Google\\ Chrome.app/Contents/MacOS/Google\\ Chrome --pack-extension=${PWD}/release/kcwidget --pack-extension-key=${PWD}/release/kcwidget.pem",
     "firefox-dev": "npm run build && npm run pack && npm run crx",
     "x": "rm -rf node_modules/chomex && cp -r ~/proj/js/chomex node_modules && npm run build",
