--- a/release.json
+++ b/release.json
@@ -1,5 +1,14 @@
 [
   {
+    "version": "2.0.66",
+    "features": [
+      "設定からOCRをWebM変換用サーバの向き先を変更できるようにした",
+      "動画キャプチャのMP4変換と、始点・終点編集と、倍速を実装した"
+    ],
+    "date": "2017/09/25",
+    "comment": "動画キャプチャでつくられたWebMファイルをMP4に変換し、ついでにちょっと編集できるようにしました。Twitter連携はまだですが、つなげるだけなので時間ができたらやります。これに伴って、今まで使っていたOCRサーバではなく、新しいサーバとエンドポイントを使うようになります。詳細は、設定の「OCR/Converter サーバ設定」の項目を見てください。ついでなんですが、このメッセージは左側のぼのちゃんにカーソルを合わせたときに出てくるバツ印のボタンをクリックすることで消せます。"
+  },
+  {
     "version": "2.0.65",
     "features": [
       "ツイート時のタグ付与のUIを改善",
