--- a/release.json
+++ b/release.json
@@ -1,5 +1,15 @@
 [
   {
+    "version": "2.1.1",
+    "features": [
+      "海域情報をwikiから取得するスクリプトを追加",
+      "改修工廠カタログの更新",
+      "新遠征を追加"
+    ],
+    "date": "2017/10/20",
+    "comment": ""
+  },
+  {
     "version": "2.1.0",
     "features": [
       "設定からOCRをWebM変換用サーバの向き先を変更できるようにした",
